--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* your code here */
 body{
             margin: 0;
             padding: 0;
@@ -12,29 +11,29 @@ body{
         .logo_name{
             font-size: 35px;
             color: white;
-            padding: 41px;
             position: absolute;
-            padding: 10px;
+            padding: 17px;
         }
-	.media-icons ul{
+        .media-icons ul{
             display: flex;
             flex-direction: row;
             padding: 10px;
             justify-content: end;
+            margin-top: 0px;
+            margin-right: 32px;
         }
-        .social-icons{
-        
+        .media-icons{
             list-style: none;
             margin-top: 1px;
             padding: 0;  
         }
-        .social-icons li {
+        .media-icons li {
             margin: 0 10px;
             border: 1px solid black;
             border-radius: 20px;
             padding: 6px;
         }
-        .social-icons a {
+        .media-icons a {
             text-decoration: none;
             color: white;
             font-size: 24px;
@@ -47,7 +46,6 @@ body{
             text-underline-position:right;
             padding: 44px;
         }
-        /* section-2 */
         .link-boxes{
             display: flex;
             justify-content: space-between;
